# oglike

./: .gitignore  CMakeLists.txt  main.cpp
data/: debug.sh  run.sh
data/config/: local
src/: ArgumentsException.h  Building.hxx  CMakeLists.txt  Galaxy.cpp  Galaxy.h  GalaxyException.cpp  OgameException.h  Resource.hxx  ResourceDeposit.cpp  ResourceDeposit.h  ResourceMine.cpp  ResourceMine.h  Universe.h
src/CMakeModules/: FindSDL.cmake
src/app/: CMakeLists.txt
src/core/: AbstractUpgradable.cpp  AbstractUpgradable.h  Account.cpp  Account.h  Account.hxx  AccountException.cpp  AccountException.h  ArgumentsException.cpp  ArgumentsParser.cpp  ArgumentsParser.h  Building.cpp  Building.h  Building.hxx  BuildingException.cpp  BuildingException.h  BuildingFactory.h  BuildingFactory.hxx  BuildingUpgradeAction.cpp  BuildingUpgradeAction.h  BuildingUpgradeAction.hxx  CMakeLists.txt  Community.cpp  Community.h  Community.hxx  CommunityException.cpp  CommunityException.h  Defense.cpp  Defense.h  Defense.hxx  DefenseFactory.h  DefenseFactory.hxx  DefenseUpgradeAction.cpp  DefenseUpgradeAction.h  DefenseUpgradeAction.hxx  FixedCostUnit.cpp  FixedCostUnit.h  FixedCostUnit.hxx  Fleet.cpp  Fleet.h  Fleet.hxx  (+65 more)
src/gui/: AbstractBuyingView.cpp  AbstractBuyingView.h  AbstractBuyingView.hxx  ActionProviderLabelStateContainer.cpp  ActionProviderLabelStateContainer.h  ActionProviderLabelStateContainer.hxx  ActionProviderStateContainer.cpp  ActionProviderStateContainer.h  ActionProviderStateContainer.hxx  BackgroundedLabel.cpp  BackgroundedLabel.h  BackgroundedLabel.hxx  BuildingsView.cpp  BuildingsView.h  BuildingsView.hxx  CMakeLists.txt  ComponentFactory.h  ComponentFactory.hxx  ConditionalPictureContainer.cpp  ConditionalPictureContainer.h  ConditionalPictureContainer.hxx  DefenseView.cpp  DefenseView.h  DefenseView.hxx  ElementDescriptionPanel.cpp  ElementDescriptionPanel.h  ElementDescriptionPanel.hxx  FacilitiesView.cpp  FacilitiesView.h  FacilitiesView.hxx  FleetView.cpp  FleetView.h  FleetView.hxx  GalaxyNavigationPanel.cpp  GalaxyNavigationPanel.h  GalaxyNavigationPanel.hxx  GalaxyPlayerData.cpp  GalaxyPlayerData.h  GalaxyPlayerData.hxx  GalaxyView.cpp  (+82 more)
src/player/: AbstractActionListener.cpp  AbstractActionListener.h  AbstractActionListener.hxx  AbstractDataModel.cpp  AbstractDataModel.h  AbstractDataModel.hxx  ActionListener.cpp  ActionListener.h  ActionListener.hxx  CMakeLists.txt  DataModel.cpp  DataModel.h  DataModel.hxx  DataModelConstants.h  DataModelException.cpp  DataModelException.h  DataModelImplementation.h  Player.cpp  Player.h  Player.hxx  PlayerException.cpp  PlayerException.h
src/server/: CMakeLists.txt  Runnable.cpp  Runnable.h  ServerException.cpp  ServerException.h  ServerLauncher.cpp  ServerLauncher.h  ServerLauncher.hxx  TimeManager.cpp  TimeManager.h  TimeManager.hxx  UniverseRunnable.cpp  UniverseRunnable.h  UniverseRunnable.hxx
src/view/: Area.cpp  Area.h  Area.hxx  CMakeLists.txt  ColoredFont.cpp  ColoredFont.h  ColoredFont.hxx  ComparisonUtils.cpp  ComparisonUtils.h  Drawable.cpp  Drawable.h  EventException.cpp  EventException.h  EventListener.cpp  EventListener.h  EventListener.hxx  Font.cpp  Font.h  Font.hxx  FontException.cpp  FontException.h  FontFactory.cpp  FontFactory.h  FontFactory.hxx  FontFactoryHashSpecialization.hxx  GraphicContainer.cpp  GraphicContainer.h  GraphicContainer.hxx  GraphicContainerException.cpp  GraphicContainerException.h  GraphicContainerListener.cpp  GraphicContainerListener.h  GridLayout.cpp  GridLayout.h  GridLayout.hxx  Layout.cpp  Layout.h  Layout.hxx  LinearLayout.cpp  LinearLayout.h  (+16 more)
